--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
 			<h1 >Sentiment world map</h1>
 		</div>
 		<div class="row center-block">
-			<div id="world-map" class="center-block" style="width: 600px; height: 400px"></div>
-		</div>
-		<div id="key" class="row center-block">
+			<div class="col-lg-8">
+				<div id="world-map" class="center-block" style="width: 600px; height: 400px"></div>
+			</div>
+			<div class="col-lg-4">
+				<div id="key" class="row center-block">
+
+				</div>
+			</div>
 		</div>
 		<br />
 		<div class="row text-center">
