Remove semicolon from the end of example object in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <span class="s2">"AL"</span><span class="o">:</span> <span class="mf">11.58</span><span class="p">,</span>
   <span class="s2">"DZ"</span><span class="o">:</span> <span class="mf">158.97</span><span class="p">,</span>
   <span class="p">...</span>
-<span class="p">};</span></code></pre>
+<span class="p">}</span></code></pre>
 		</div>
 		<div class="col-lg-6">
 			<br />
