--- a/index.html
+++ b/index.html
@@ -14,24 +14,28 @@
 		<div class='row text-center'>
 			<h1 >Sentiment world map</h1>
 		</div>
+		<div id="warning" class="row center-block text-center">
+		</div>
 		<div class="row center-block">
-			<div class="col-lg-8">
+			<div id="mapPosition" class="col-lg-8">
+				<!-- 
 				<div id="world-map" class="center-block" style="width: 600px; height: 400px"></div>
+				-->
 			</div>
 			<div class="col-lg-4">
-				<div id="key" class="row center-block">
 
+				<div id="key" class="row center-block">
 				</div>
 			</div>
 		</div>
 		<br />
 		<div class="row text-center">
 		<div class="col-lg-6">
-			<p>You can provide data here in the following format (territory code must be represented accoding to ISO 3166 alpha 2 ):</p>
+			<p>You can provide data here in the following format (territory code must be represented accoding to ISO 3166 alpha 2 and range of values must be 0-10):</p>
 				<pre class="syntax"><code class="language-javascript"><span class="p">{</span>
-  <span class="s2">"AF"</span><span class="o">:</span> <span class="mf">16.63</span><span class="p">,</span>
-  <span class="s2">"AL"</span><span class="o">:</span> <span class="mf">11.58</span><span class="p">,</span>
-  <span class="s2">"DZ"</span><span class="o">:</span> <span class="mf">158.97</span><span class="p">,</span>
+  <span class="s2">"AF"</span><span class="o">:</span> <span class="mf">2.5</span><span class="p">,</span>
+  <span class="s2">"AL"</span><span class="o">:</span> <span class="mf">5</span><span class="p">,</span>
+  <span class="s2">"DZ"</span><span class="o">:</span> <span class="mf">8</span><span class="p">,</span>
   <span class="p">...</span>
 <span class="p">}</span></code></pre>
 		</div>
@@ -39,7 +43,14 @@
 			<br />
 			<p>New data:</p>
 			<form role="form" style="padding-top:5px;">
-				<textarea id="data" class="form-control" rows="3"></textarea>
+				<textarea id="data" class="form-control" rows="6">
+					{ "BE": 5.0, "FR": 2.5, "NL": 5.0,
+					  "UA": 6.0, "RU": 7.142857142857143, "MY": 5.0,
+					  "CA": 5.0, "DE": 5.0, "JP": 5.0,
+					  "ZA": 4.0, "US": 4.660194174757281, "MX": 5.0,
+					  "GB": 5.666666666666666, "SE": 5.0, "IE": 5.0,
+					  "ID": 5.0, "PL": 5.0 }
+				</textarea>
 			</form>
 			<button id="submit" type="button" class="btn btn-default" style="margin-top: 5px;">Submit</button>
 		</div>
