--- a/index.html
+++ b/index.html
@@ -52,8 +52,20 @@
 					  "ID": 5.0, "PL": 5.0 }
 				</textarea>
 			</form>
-			<button id="submit" type="button" class="btn btn-default" style="margin-top: 5px;">Submit</button>
-		</div>
+			<div class="row">
+				<div class="col-lg-9">
+					Scale diversity:
+					<select id='normalize' class="form-control">
+					 	<option>polynomial</option>
+					 	<option>linear</option>
+					</select>
+				</div>
+					<div class="col-lg-3">
+						<br />
+						<button id="submit" type="button" class="btn btn-default" style="margin-top: 0px;">Submit</button>
+					</div>
+				</div>
+			</div>
 
 			
 		<div>
