--- a/index.html
+++ b/index.html
@@ -16,17 +16,12 @@
 		</div>
 		<div id="warning" class="row center-block text-center">
 		</div>
-		<div class="row center-block">
-			<div id="mapPosition" class="col-lg-8">
+		<div id="mapPosition" class="row center-block">
 				<!-- 
 				<div id="world-map" class="center-block" style="width: 600px; height: 400px"></div>
 				-->
-			</div>
-			<div class="col-lg-4">
-
-				<div id="key" class="row center-block">
-				</div>
-			</div>
+		</div>
+		<div id="key" class="row center-block text-center"> 
 		</div>
 		<br />
 		<div class="row text-center">
