Remove restrictions for data value - legend generates automatically adjusting values

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<br />
 		<div class="row text-center">
 		<div class="col-lg-6">
-			<p>You can provide data here in the following format (territory code must be represented accoding to ISO 3166 alpha 2 and range of values must be 0-10):</p>
+			<p>You can provide data here in the following format (territory code must be represented accoding to ISO 3166 alpha 2):</p>
 				<pre class="syntax"><code class="language-javascript"><span class="p">{</span>
   <span class="s2">"AF"</span><span class="o">:</span> <span class="mf">2.5</span><span class="p">,</span>
   <span class="s2">"AL"</span><span class="o">:</span> <span class="mf">5</span><span class="p">,</span>
